<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="ExtraText">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/sports_tournaments_logo"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="25dp"
        android:scaleType="centerCrop" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="¡Inicia sesión en tu cuenta!"
        android:gravity="start"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/etEmail"
        style="@style/viewCustom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/etPassword"
        style="@style/viewCustom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLogin"
        style="@style/viewCustom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:onClick="iniciarSesion" />

    <Button
        android:id="@+id/create"
        style="@style/viewCustom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:background="@drawable/rounded_button"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:onClick="registrar" />

    <TextView
        android:id="@+id/txtForgotPassword"
        style="@style/viewCustom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:onClick="olvidoPassword"
        android:text="@string/forgotPassword"
        android:textSize="20sp" />

</LinearLayout>