<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/sports_tournaments_logo"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="25dp"
            android:scaleType="centerCrop" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="¡Crea una nueva cuenta!"
            android:gravity="start"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/txtName"
            style="@style/viewCustom"
            android:hint="@string/firstName"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/txtEmail"
            style="@style/viewCustom"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/txtPassword"
            style="@style/viewCustom"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">

            <CheckBox
                android:id="@+id/chkPrivacyPolicy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp"/>

            <TextView
                android:id="@+id/txtPrivacyPolicyLink"
                android:layout_width="296dp"
                android:layout_height="match_parent"
                android:autoLink="none"
                android:layout_marginTop="5dp"
                android:text="He leído y acepto la Política de Privacidad"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            style="@style/viewCustom"
            android:onClick="registrar"
            android:text="@string/create"
            android:background="@drawable/rounded_button"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center" />
    </LinearLayout>
</ScrollView>